# bank-statement-rag

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cli.py  config.json  config.yml  docker-compose.yml  main.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  transactions_rag.ipynb
.github/workflows/: ci.yml
src/: config.py  embeddings.py  extraction.py  logger.py  processing.py  query_engine.py  rag_system.py
streamlit_app/: app.py  charts.py  config.py  utils.py
streamlit_app/pages/: chat.py  dashboard.py  settings.py  transactions.py
tests/: conftest.py  test_config.py  test_embeddings.py  test_processing.py  test_query_engine.py
